fix: reverted name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "material-nightfall",
+  "name": "black-material",
   "displayName": "Material Nightfall Theme",
   "description": "Near-true black Material theme",
   "publisher": "yanyanishevskyi",
